syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc CountStream (CountRequest) returns (stream CountResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message CountRequest {
  int64 n = 1;
}

message CountResponse {
  int64 count = 1;
}
